Updated the random code generator API

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- <!DOCTYPE html>
+<html lang="en"> -->
 
 <head>
     <meta charset="UTF-8" />
@@ -22,10 +22,10 @@
                 </p>
                 <i class="fas fa-quote-right"></i>
             </div>
-            <div class="author">
-                <span>__</span>
-                <span class="name">Frank Tyger</span>
-            </div>
+            <!--       <div class="author">
+          <span>__</span>
+          <span class="name">Frank Tyger</span>
+        </div> -->
         </div>
         <div class="buttons">
             <div class="features">
